--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -165,7 +165,9 @@
                     <navigationItem key="navigationItem" title="Треды" id="MEn-bw-bzK">
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="NQO-nl-fZ8">
                             <connections>
-                                <segue destination="wgF-au-dzt" kind="presentation" identifier="segueToNewThread" id="XRT-4w-L0S"/>
+                                <segue destination="wgF-au-dzt" kind="popoverPresentation" identifier="segueToNewThread" popoverAnchorBarButtonItem="NQO-nl-fZ8" id="XRT-4w-L0S">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -393,7 +395,9 @@
                     <navigationItem key="navigationItem" title="Тред" id="iaG-NT-yBd">
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="tpv-GH-b3T">
                             <connections>
-                                <segue destination="wgF-au-dzt" kind="presentation" identifier="segueToNewPost" id="fFt-k5-qt1"/>
+                                <segue destination="wgF-au-dzt" kind="popoverPresentation" identifier="segueToNewPost" popoverAnchorBarButtonItem="tpv-GH-b3T" id="fFt-k5-qt1">
+                                    <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                </segue>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -421,7 +425,7 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR" userLabel="Container For Post Elements" customClass="DVBContainerForPostElements">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="426"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="402"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mfq-Cv-IWZ" userLabel="Markup Container">
                                                 <rect key="frame" x="15" y="130" width="290" height="30"/>
@@ -546,12 +550,12 @@
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Имя" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cMi-uW-0S6">
-                                                <rect key="frame" x="15" y="295" width="290" height="30"/>
+                                                <rect key="frame" x="15" y="285" width="290" height="30"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                             </textField>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sby-Ye-Jpl" userLabel="Add photo button container">
-                                                <rect key="frame" x="149" y="389" width="22" height="22"/>
+                                                <rect key="frame" x="149" y="365" width="22" height="22"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvk-ge-8dV">
                                                         <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
@@ -581,7 +585,7 @@
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes"/>
                                             </textView>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NaI-O3-J3g">
-                                                <rect key="frame" x="15" y="344" width="290" height="30"/>
+                                                <rect key="frame" x="15" y="320" width="290" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="JsE-oe-fa2"/>
                                                 </constraints>
@@ -605,12 +609,12 @@
                                             <constraint firstAttribute="trailing" secondItem="QiY-eA-Udo" secondAttribute="trailing" constant="15" id="YXB-hy-w9k"/>
                                             <constraint firstItem="yu0-D0-p1U" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="c85-hy-rhJ"/>
                                             <constraint firstAttribute="trailing" secondItem="NaI-O3-J3g" secondAttribute="trailing" constant="15" id="fT9-kn-FeO"/>
-                                            <constraint firstItem="cMi-uW-0S6" firstAttribute="top" secondItem="wjr-Ih-9ju" secondAttribute="bottom" constant="15" id="gNl-5L-uA9"/>
+                                            <constraint firstItem="cMi-uW-0S6" firstAttribute="top" secondItem="wjr-Ih-9ju" secondAttribute="bottom" constant="5" id="gNl-5L-uA9"/>
                                             <constraint firstItem="QiY-eA-Udo" firstAttribute="top" secondItem="mfq-Cv-IWZ" secondAttribute="bottom" constant="15" id="hXU-tE-Wbd"/>
                                             <constraint firstAttribute="trailing" secondItem="mfq-Cv-IWZ" secondAttribute="trailing" constant="15" id="hZa-Hq-OY5"/>
                                             <constraint firstItem="wjr-Ih-9ju" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="iAa-8K-uac"/>
                                             <constraint firstItem="cMi-uW-0S6" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="q9C-Yl-ltH"/>
-                                            <constraint firstItem="NaI-O3-J3g" firstAttribute="top" secondItem="cMi-uW-0S6" secondAttribute="bottom" constant="19" id="tNS-uk-p91"/>
+                                            <constraint firstItem="NaI-O3-J3g" firstAttribute="top" secondItem="cMi-uW-0S6" secondAttribute="bottom" constant="5" id="tNS-uk-p91"/>
                                             <constraint firstItem="wjr-Ih-9ju" firstAttribute="top" secondItem="QiY-eA-Udo" secondAttribute="bottom" constant="15" id="tjr-HV-C99"/>
                                             <constraint firstItem="yu0-D0-p1U" firstAttribute="top" secondItem="RLY-YJ-MBR" secondAttribute="top" constant="15" id="vDr-68-HCD"/>
                                         </constraints>
@@ -689,8 +693,8 @@
         <image name="Video" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
+        <segue reference="Iwy-TH-KYT"/>
         <segue reference="fFt-k5-qt1"/>
         <segue reference="o55-Sb-BOJ"/>
-        <segue reference="Iwy-TH-KYT"/>
     </inferredMetricsTieBreakers>
 </document>
