--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -418,14 +418,14 @@
                         <viewControllerLayoutGuide type="bottom" id="xko-xx-eS4"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Oms-K5-odr">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="550"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh">
-                                <rect key="frame" x="0.0" y="64" width="320" height="416"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="486"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR" userLabel="Container For Post Elements" customClass="DVBContainerForPostElements">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="402"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="450"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mfq-Cv-IWZ" userLabel="Markup Container">
                                                 <rect key="frame" x="15" y="130" width="290" height="30"/>
@@ -554,27 +554,14 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
                                             </textField>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sby-Ye-Jpl" userLabel="Add photo button container">
-                                                <rect key="frame" x="149" y="365" width="22" height="22"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvk-ge-8dV">
-                                                        <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
-                                                        <state key="normal">
-                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="V5j-q0-zXo"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NaI-O3-J3g">
+                                                <rect key="frame" x="15" y="320" width="290" height="30"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="22" id="Mdd-yT-Xyc"/>
-                                                    <constraint firstAttribute="centerX" secondItem="Nvk-ge-8dV" secondAttribute="centerX" id="Q3S-hc-djB"/>
-                                                    <constraint firstAttribute="centerY" secondItem="Nvk-ge-8dV" secondAttribute="centerY" id="bor-qM-Ztw"/>
-                                                    <constraint firstAttribute="width" constant="22" id="m54-Xy-Xlt"/>
+                                                    <constraint firstAttribute="height" constant="30" id="JsE-oe-fa2"/>
                                                 </constraints>
-                                            </view>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                                            </textField>
                                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" tag="3" contentMode="scaleToFill" directionalLockEnabled="YES" bounces="NO" showsHorizontalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yu0-D0-p1U">
                                                 <rect key="frame" x="15" y="15" width="290" height="100"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -584,35 +571,65 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" autocorrectionType="yes" spellCheckingType="yes"/>
                                             </textView>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NaI-O3-J3g">
-                                                <rect key="frame" x="15" y="320" width="290" height="30"/>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="j1y-7G-FSY" customClass="DVBPostPhotoContainerView">
+                                                <rect key="frame" x="15" y="365" width="70" height="70"/>
+                                                <subviews>
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XbM-Kz-D8k">
+                                                        <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
+                                                    </imageView>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sby-Ye-Jpl" userLabel="Add photo button container">
+                                                        <rect key="frame" x="24" y="24" width="22" height="22"/>
+                                                        <subviews>
+                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nvk-ge-8dV">
+                                                                <rect key="frame" x="0.0" y="0.0" width="22" height="22"/>
+                                                                <state key="normal">
+                                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                                </state>
+                                                                <connections>
+                                                                    <action selector="pickPhotoAction:" destination="Bhq-1W-f9J" eventType="touchUpInside" id="V5j-q0-zXo"/>
+                                                                </connections>
+                                                            </button>
+                                                        </subviews>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="22" id="Mdd-yT-Xyc"/>
+                                                            <constraint firstAttribute="centerX" secondItem="Nvk-ge-8dV" secondAttribute="centerX" id="Q3S-hc-djB"/>
+                                                            <constraint firstAttribute="centerY" secondItem="Nvk-ge-8dV" secondAttribute="centerY" id="bor-qM-Ztw"/>
+                                                            <constraint firstAttribute="width" constant="22" id="m54-Xy-Xlt"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="30" id="JsE-oe-fa2"/>
+                                                    <constraint firstItem="XbM-Kz-D8k" firstAttribute="top" secondItem="j1y-7G-FSY" secondAttribute="top" id="249-sd-K5d"/>
+                                                    <constraint firstAttribute="centerX" secondItem="sby-Ye-Jpl" secondAttribute="centerX" id="4sQ-3I-DDV"/>
+                                                    <constraint firstAttribute="bottom" secondItem="XbM-Kz-D8k" secondAttribute="bottom" id="Gf9-og-pKX"/>
+                                                    <constraint firstAttribute="width" constant="70" id="IYz-n0-m2f"/>
+                                                    <constraint firstAttribute="centerY" secondItem="sby-Ye-Jpl" secondAttribute="centerY" id="L5B-Ee-kAP"/>
+                                                    <constraint firstAttribute="trailing" secondItem="XbM-Kz-D8k" secondAttribute="trailing" id="XRB-Yv-NCh"/>
+                                                    <constraint firstAttribute="height" constant="70" id="hzN-lX-aF7"/>
+                                                    <constraint firstItem="XbM-Kz-D8k" firstAttribute="leading" secondItem="j1y-7G-FSY" secondAttribute="leading" id="wed-eH-r61"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
-                                            </textField>
+                                            </view>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="sby-Ye-Jpl" firstAttribute="top" secondItem="NaI-O3-J3g" secondAttribute="bottom" constant="15" id="13M-Ir-YRr"/>
-                                            <constraint firstAttribute="bottom" secondItem="sby-Ye-Jpl" secondAttribute="bottom" constant="15" id="67F-fm-4pS"/>
                                             <constraint firstItem="NaI-O3-J3g" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="7X6-aA-TJr"/>
                                             <constraint firstItem="cMi-uW-0S6" firstAttribute="height" secondItem="wjr-Ih-9ju" secondAttribute="height" id="8uQ-eA-oLj"/>
                                             <constraint firstItem="mfq-Cv-IWZ" firstAttribute="top" secondItem="yu0-D0-p1U" secondAttribute="bottom" constant="15" id="9Mp-zV-3Wd"/>
                                             <constraint firstAttribute="trailing" secondItem="cMi-uW-0S6" secondAttribute="trailing" constant="15" id="Dt8-aL-gre"/>
                                             <constraint firstAttribute="trailing" secondItem="yu0-D0-p1U" secondAttribute="trailing" constant="15" id="Nhn-vt-Q1G"/>
                                             <constraint firstItem="QiY-eA-Udo" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="PxN-16-2jq"/>
-                                            <constraint firstAttribute="centerX" secondItem="sby-Ye-Jpl" secondAttribute="centerX" id="Scb-mR-uTy"/>
+                                            <constraint firstItem="j1y-7G-FSY" firstAttribute="top" secondItem="NaI-O3-J3g" secondAttribute="bottom" constant="15" id="T1N-1h-Udk"/>
                                             <constraint firstItem="mfq-Cv-IWZ" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="V4g-Rx-nYe"/>
                                             <constraint firstAttribute="trailing" secondItem="wjr-Ih-9ju" secondAttribute="trailing" constant="15" id="WtV-4l-KSA"/>
                                             <constraint firstAttribute="trailing" secondItem="QiY-eA-Udo" secondAttribute="trailing" constant="15" id="YXB-hy-w9k"/>
                                             <constraint firstItem="yu0-D0-p1U" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="c85-hy-rhJ"/>
+                                            <constraint firstItem="j1y-7G-FSY" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="ejg-09-wTf"/>
                                             <constraint firstAttribute="trailing" secondItem="NaI-O3-J3g" secondAttribute="trailing" constant="15" id="fT9-kn-FeO"/>
                                             <constraint firstItem="cMi-uW-0S6" firstAttribute="top" secondItem="wjr-Ih-9ju" secondAttribute="bottom" constant="5" id="gNl-5L-uA9"/>
                                             <constraint firstItem="QiY-eA-Udo" firstAttribute="top" secondItem="mfq-Cv-IWZ" secondAttribute="bottom" constant="15" id="hXU-tE-Wbd"/>
                                             <constraint firstAttribute="trailing" secondItem="mfq-Cv-IWZ" secondAttribute="trailing" constant="15" id="hZa-Hq-OY5"/>
                                             <constraint firstItem="wjr-Ih-9ju" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="iAa-8K-uac"/>
+                                            <constraint firstAttribute="bottom" secondItem="j1y-7G-FSY" secondAttribute="bottom" constant="15" id="oNd-hF-hQ2"/>
                                             <constraint firstItem="cMi-uW-0S6" firstAttribute="leading" secondItem="RLY-YJ-MBR" secondAttribute="leading" constant="15" id="q9C-Yl-ltH"/>
                                             <constraint firstItem="NaI-O3-J3g" firstAttribute="top" secondItem="cMi-uW-0S6" secondAttribute="bottom" constant="5" id="tNS-uk-p91"/>
                                             <constraint firstItem="wjr-Ih-9ju" firstAttribute="top" secondItem="QiY-eA-Udo" secondAttribute="bottom" constant="15" id="tjr-HV-C99"/>
@@ -625,9 +642,9 @@
                                             <outlet property="captchaUpdateButton" destination="ATw-LV-fb7" id="sa5-gZ-bhQ"/>
                                             <outlet property="captchaValueTextField" destination="1dE-mf-Pvb" id="Dwj-Fe-tAD"/>
                                             <outlet property="commentTextView" destination="yu0-D0-p1U" id="4l7-wo-4pd"/>
-                                            <outlet property="contstraintFromPhotoToBottomEdge" destination="67F-fm-4pS" id="Odb-eU-Djr"/>
                                             <outlet property="emailTextField" destination="NaI-O3-J3g" id="cmK-mg-Wdy"/>
                                             <outlet property="fromThemeToCaptchaFieldContainer" destination="tjr-HV-C99" id="8e5-uX-g7i"/>
+                                            <outlet property="image1View" destination="XbM-Kz-D8k" id="KPg-Gi-fZC"/>
                                             <outlet property="nameTextField" destination="cMi-uW-0S6" id="wp9-qJ-bcL"/>
                                             <outlet property="subjectTextField" destination="wjr-Ih-9ju" id="NdT-Mr-QQs"/>
                                             <outlet property="uploadButton" destination="Nvk-ge-8dV" id="UkC-bs-FYd"/>
@@ -676,6 +693,8 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="320" height="550"/>
                     <connections>
                         <outlet property="containerForPostElementsView" destination="RLY-YJ-MBR" id="Hsd-wI-uQL"/>
                         <outlet property="createPostScrollView" destination="ekp-o7-QBh" id="NpC-AA-44V"/>
@@ -694,7 +713,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Iwy-TH-KYT"/>
-        <segue reference="fFt-k5-qt1"/>
+        <segue reference="XRT-4w-L0S"/>
         <segue reference="o55-Sb-BOJ"/>
     </inferredMetricsTieBreakers>
 </document>
